--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,15 +1,5 @@
 <h1>Hello</h1>
 
-<div id="map-canvas"></div>
+<button type="button" id="addMarkers">Add Markers</button>
 
-<script type="text/javascript">
- function initialize() {
-   var mapOptions = {
-     center: { lat: -34.397, lng: 150.644},
-     zoom: 8
-   };
-   var map = new google.maps.Map(document.getElementById('map-canvas'),
-       mapOptions);
- }
- google.maps.event.addDomListener(window, 'load', initialize);
-</script>
+<div id="map-canvas"></div>
