Add lat/lng back to DB

--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -3,3 +3,5 @@
 <button type="button" id="addMarkers">Add Markers</button>
 
 <div id="map-canvas"></div>
+
+<button type="button" id="removeMarkers">Remove Markers</button>
