Update to only have one info window open at a time

--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,6 +1,4 @@
-<h1>Hello</h1>
-
-<button type="button" id="addMarkers">Add Markers</button>
+<button type="button" id="addMarkers">MICHIGAN</button>
 
 <div id="map-canvas"></div>
 
