Add all school seeds and markers

--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,4 +1,24 @@
-<button type="button" id="addMarkers">MICHIGAN</button>
+<button type="button" id="addUMMarkers">MICHIGAN</button>
+<button type="button" id="addMSUMarkers">MSU</button>
+
+<button type="button" id="addIUMarkers">INDIANA</button>
+<button type="button" id="addUIMarkers">ILLINOIS</button>
+
+<button type="button" id="addNUMarkers">NORTHWESTERN</button>
+<button type="button" id="addOSUMarkers">OSU</button>
+
+<button type="button" id="addPSUMarkers">PSU</button>
+<button type="button" id="addPUMarkers">PURDUE</button>
+
+<button type="button" id="addRMarkers">RUTGERS</button>
+<button type="button" id="addUIOWAMarkers">IOWA</button>
+
+<button type="button" id="addMDMarkers">MARYLAND</button>
+<button type="button" id="addUNMarkers">NEBRASKA</button>
+
+<button type="button" id="addUWMarkers">WISCONSIN</button>
+<button type="button" id="addMINNMarkers">MINNESOTA</button>
+
 
 <div id="map-canvas"></div>
 
