--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,25 +1,21 @@
-<button type="button" id="addUMMarkers">MICHIGAN</button>
-<button type="button" id="addMSUMarkers">MSU</button>
 
-<button type="button" id="addIUMarkers">INDIANA</button>
-<button type="button" id="addUIMarkers">ILLINOIS</button>
-
-<button type="button" id="addNUMarkers">NORTHWESTERN</button>
-<button type="button" id="addOSUMarkers">OSU</button>
-
-<button type="button" id="addPSUMarkers">PSU</button>
-<button type="button" id="addPUMarkers">PURDUE</button>
-
-<button type="button" id="addRMarkers">RUTGERS</button>
-<button type="button" id="addUIOWAMarkers">IOWA</button>
-
-<button type="button" id="addMDMarkers">MARYLAND</button>
-<button type="button" id="addUNMarkers">NEBRASKA</button>
-
-<button type="button" id="addUWMarkers">WISCONSIN</button>
-<button type="button" id="addMINNMarkers">MINNESOTA</button>
-
+<img id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
+<img id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
+<img id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
+<img id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
+<img id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
+<img id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
+<img id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
+<img id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
+<img id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
+<img id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
+<img id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
+<img id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
+<img id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
+<img id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
 
 <div id="map-canvas"></div>
+
+<img id="addB10Markers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa_conf/500/big_ten.png?w=50&h=50&transparent=true" alt="" />
 
 <button type="button" id="removeMarkers">Remove Markers</button>
