--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,21 +1,31 @@
+<header class="group">
+  <nav class="group">
+    <img class="header-items header-icon" id="addB10Markers" src="http://i.turner.ncaa.com/sites/all/themes/ncaa/ncaa-respo/logo.png" alt="" />
+    <img class="header-items header-icon" id="addMLBMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/mlb.png?w=80&h=80&transparent=true" alt="" />
+    <h1 class="header-items" id='logo' ></h1>
+    <img class="header-items header-icon" id="addNFLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nfl.png?w=80&h=80&transparent=true" alt="" />
+    <img class="header-items header-icon" id="addNHLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nhl.png?w=80&h=80&transparent=true" alt="" />
+  </nav>
+</header>
+<div class="b10_logos">
+  <img class="logo" id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
+  <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
 
-<img id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
-<img id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
-<img id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
-<img id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
-<img id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
-<img id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
-<img id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
-<img id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
-<img id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
-<img id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
-<img id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
-<img id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
-<img id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
-<img id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
+</div>
 
 <div id="map-canvas"></div>
 
-<img id="addB10Markers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa_conf/500/big_ten.png?w=50&h=50&transparent=true" alt="" />
 
-<button type="button" id="removeMarkers">Remove Markers</button>
+<!-- <button type="button" id="removeMarkers">Remove Markers</button> -->
