--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,13 +43,62 @@ ul {
  clear: both;
 }
 
-#map-canvas {
- height: 500px;
- width: 100%;
- margin: 0;
- padding: 0;
+// header
+#logo {
+  border: 2px solid #C3C3C3;
+  width: 65px;
+  height: 65px;
+  background-image: image_url('logo.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: white;
+  background-position: center;
+  border-radius: 50%;
 }
 
-img {
+.header-items {
+  float: left;
+}
+
+.header-icon {
+  width: 40px;
+  padding: 5px;
+}
+
+nav {
+  width: 269px;
+  margin: auto;
+}
+
+header {
+  background: #C3C3C3;
+  width: 100%;
   height: 50px;
+  margin-bottom: 20px;
+}
+
+.logo {
+  height: 30px;
+}
+
+#map-canvas {
+  position: relative;
+  left: -30px;
+   height: 500px;
+   width: calc(100% - 80px);
+   margin: 0;
+   padding: 0;
+   float: left;
+  transition: left 1s;
+}
+.b10_logos {
+  position: relative;
+  left: -30px;
+  transition: left 1s;
+  width: 40px;
+  float: left;
+}
+
+.show {
+  left: 0 !important;
 }
