--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -7,22 +7,43 @@
     <img class="header-items header-icon" id="addNHLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nhl.png?w=80&h=80&transparent=true" alt="" />
   </nav>
 </header>
-<div class="b10_logos">
-  <img class="logo" id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
-  <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
 
+<div class="logo_group">  
+  <div class="b10_logos group">
+    <img class="logo" id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
+    <div class='white'></div>
+    <img class="logo" id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
+  </div>
+
+  <div class="NFL_logos group">
+    <img class="logo" id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
+    <div class='white'></div>
+    <img class="logo" id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
+  </div>
 </div>
 
 <div id="map-canvas"></div>
