--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,48 +1,100 @@
 <header class="group">
   <nav class="group">
     <img class="header-items header-icon" id="addB10Markers" src="http://i.turner.ncaa.com/sites/all/themes/ncaa/ncaa-respo/logo.png" alt="" />
-    <img class="header-items header-icon" id="addMLBMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/mlb.png?w=80&h=80&transparent=true" alt="" />
+    <img class="header-items header-icon" id="addMLBMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/mlb.png?w=40&h=40&transparent=true" alt="" />
     <h1 class="header-items" id='logo' ></h1>
-    <img class="header-items header-icon" id="addNFLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nfl.png?w=80&h=80&transparent=true" alt="" />
-    <img class="header-items header-icon" id="addNHLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nhl.png?w=80&h=80&transparent=true" alt="" />
+    <img class="header-items header-icon" id="addNFLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nfl.png?w=40&h=40&transparent=true" alt="" />
+    <img class="header-items header-icon" id="addNHLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nhl.png?w=40&h=40&transparent=true" alt="" />
   </nav>
 </header>
 
-<div class="logo_group">  
-  <div class="b10_logos group">
-    <img class="logo" id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
+<div class="logo_group">
+  <div class="b10_logos">
+    <img class="logo" id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=40&h=40&transparent=true" alt="" />
     <div class='white'></div>
-    <img class="logo" id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=40&h=40&transparent=true" alt="" />
   </div>
 
-  <div class="NFL_logos group">
-    <img class="logo" id="addIUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/84.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addMDMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/120.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addMSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/127.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUMMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/130.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addOSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/194.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addPSUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/213.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addRMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/164.png&w=80&h=80&transparent=true" alt="" />
+  <div class="NFL_logos">
+    <img class="logo" id="addNFLbalMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/bal.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLbufMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/buf.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLcinMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/cin.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLcleMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/cle.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLdenMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/den.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLhouMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/hou.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLindMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/ind.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLjaxMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/jax.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLkcMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/kc.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLmaiMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/mia.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLneMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/ne.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLnyjMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/nyj.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLoakMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/oak.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLpitMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/pit.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLsdMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/sd.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLtenMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/ten.png&w=40&h=40&transparent=true" alt="" />
     <div class='white'></div>
-    <img class="logo" id="addUIMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/356.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUIOWAMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2294.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addMINNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/135.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUNMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/158.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=80&h=80&transparent=true" alt="" />
-    <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=80&h=80&transparent=true" alt="" />
+    <img class="logo" id="addNFLariMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/ari.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLatlMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/atl.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLcarMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/car.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLchiMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/chi.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLdalMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/dal.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLdetMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/det.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLgbMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/gb.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLminMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/min.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLnoMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/no.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLnygMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/nyg.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLphiMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/phi.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLstlMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/stl.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLsfMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/sf.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLseaMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/sea.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLtbMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/tb.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addNFLwshMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/wsh.png&w=40&h=40&transparent=true" alt="" />
+  </div>
+
+  <div class="MLB_logos">
+    <img class="logo" id="addMLBbalMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/bal.png&w=40&h=40&transparent=true" alt="Baltimore" />
+    <img class="logo" id="addMLBbosMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/bos.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBchwMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/chw.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBcleMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/cle.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBdetMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/det.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBhouMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/hou.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBkcMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/kc.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBlaaMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/laa.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBminMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/min.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBnyyMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/nyy.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBoakMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/oak.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBseaMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/sea.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBtbMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/tb.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBtexMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/tex.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBtorMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/tor.png&w=40&h=40&transparent=true" alt="" />
+    <div class='white'></div>
+    <img class="logo" id="addMLBariMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/ari.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBatlMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/atl.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBchcMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/chc.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBcinMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/cin.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBcolMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/col.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBmiaMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/mia.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBladMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/lad.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBmilMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/mil.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBnymMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/nym.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBphiMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/phi.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBpitMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/pit.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBsdMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/sd.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBsfMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/sf.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBstlMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/stl.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addMLBwshMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/mlb/500/wsh.png&w=40&h=40&transparent=true" alt="" />
   </div>
 </div>
 
