--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -99,6 +99,6 @@
 </div>
 
 <div id="map-canvas"></div>
-
+<input id="pac-input" class="controls" type="text" placeholder="Set Your Area">
 
 <!-- <button type="button" id="removeMarkers">Remove Markers</button> -->
