DRY up addMarkers

--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,10 +1,35 @@
 <header class="group">
   <nav class="group">
-    <img class="header-items header-icon" id="addB10Markers" src="http://i.turner.ncaa.com/sites/all/themes/ncaa/ncaa-respo/logo.png" alt="" />
-    <img class="header-items header-icon" id="addMLBMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/mlb.png?w=40&h=40&transparent=true" alt="" />
-    <h1 class="header-items" id='logo' ></h1>
-    <img class="header-items header-icon" id="addNFLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nfl.png?w=40&h=40&transparent=true" alt="" />
-    <img class="header-items header-icon" id="addNHLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nhl.png?w=40&h=40&transparent=true" alt="" />
+    <ul class="nav-ul group">
+      <li>
+        <img class="header-icon group" src="http://i.turner.ncaa.com/sites/all/themes/ncaa/ncaa-respo/logo.png" alt="" />
+        <ul class="dropdown">
+          <li>
+            <img class="header-icon group" id="addB10Markers" src="http://marylandreporter.com/wp-content/uploads/2012/11/Big_Ten_Conference_logo_2012.svg_.png" alt="" />
+          </li>
+        </ul>
+      </li>
+      <li>
+        <img class="header-icon" id="addMLBMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/mlb.png?w=40&h=40&transparent=true" alt="" />
+        <ul class="dropdown">
+          <li>
+            AL
+          </li>
+          <li>
+            NL
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h1 id='logo' ></h1>
+      </li>
+      <li>
+        <img class="header-icon" id="addNFLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nfl.png?w=40&h=40&transparent=true" alt="" />
+      </li>
+      <li>
+        <img class="header-icon" id="addNHLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nhl.png?w=40&h=40&transparent=true" alt="" />
+      </li>
+    </ul>
   </nav>
 </header>
 
