--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,7 @@ ul {
 
 // header
 #logo {
-  border: 2px solid #C3C3C3;
+  border: 2px solid #222;
   width: 65px;
   height: 65px;
   background-image: image_url('logo.png');
@@ -56,10 +56,6 @@ ul {
   border-radius: 50%;
 }
 
-.header-items {
-  float: left;
-}
-
 .header-icon {
   width: 40px;
   padding: 5px;
@@ -67,23 +63,52 @@ ul {
 }
 
 nav {
-  width: 269px;
+  width: 270px;
+  height: 50px;
   margin: auto;
   z-index: 5;
 }
 
 header {
+  background: #222;
   position: relative;
-  background: #C3C3C3;
   width: 100%;
   height: 50px;
   z-index: 5;
 }
 
+.nav-ul li {
+  position: relative;
+  float: left;
+  z-index: 5;
+  display: block;
+  cursor: pointer;
+}
+
+.nav-ul li:hover > img {
+  background: #c3c3c3;
+}
+
+.nav-ul li:hover > .dropdown {
+  display: block;
+}
+
+.dropdown {
+  padding-top: 12px;
+  display: none;
+  z-index: 6;
+  position: absolute;
+}
+
+.dropdown li {
+  background: #ddd;
+  float: none;
+}
+
 .logo {
+  float: left;
   width: 30px;
   height: 30px;
-  float: left;
 }
 
 .logo:hover {
