--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -123,6 +123,8 @@
   </div>
 </div>
 
+<ul id="active-bars">
+</ul>
 <div id="map-canvas"></div>
 <input id="pac-input" class="controls" type="text" placeholder="Set Your Area">
 
