--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,15 +131,45 @@ header {
   width: calc(68%);
   margin: auto;
   float: left;
+  left: 1%;
+  transition: left 1s;
+
+}
+
+#home {
+  z-index: -10;
+  float: left;
+  position: absolute;
+  height: 500px;
+  left: 2%;
+  width: 96%;
+  transition: width 1s, left 1s;
+  background: red;
+  overflow: hidden;
+}
+
+.hide-map {
+  left: 69% !important;
+  transition: left 1s;
+}
+
+.hide-sidebar {
+  left: -29% !important;
+  transition: left 1s;
 }
 
 #active-bars {
+  left: 1%;
+  z-index: 2;
+  position: relative;
   float: left;
   width: 30%;
   height: 500px;
   border: 1px solid black;
   overflow: scroll;
   font-family: Roboto;
+  transition: left 1s;
+  background: white;
 }
 
 #active-bars li {
