--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -123,9 +123,13 @@
   </div>
 </div>
 
-<ul id="active-bars">
+<ul id="active-bars" class="hide-sidebar">
 </ul>
-<div id="map-canvas"></div>
+<div id="home">
+  <h1>Welcome to Home Court</h1>
+  <h2>Where you never sit in the wrong bar!</h2>
+</div>
+<div id="map-canvas" class="hide-map"></div>
 <input id="pac-input" class="controls" type="text" placeholder="Set Your Area">
 
 <!-- <button type="button" id="removeMarkers">Remove Markers</button> -->
