--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -2,23 +2,23 @@
   <nav class="group">
     <ul class="nav-ul group">
       <li>
-        <img class="header-icon group" src="http://i.turner.ncaa.com/sites/all/themes/ncaa/ncaa-respo/logo.png" alt="" />
-        <ul class="dropdown">
+        <img class="header-icon" id="addB10Markers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa_conf/500/big_ten.png?w=40&h=40&transparent=true" alt="" />
+        <!-- <ul class="dropdown">
           <li>
-            <img class="header-icon group" id="addB10Markers" src="http://marylandreporter.com/wp-content/uploads/2012/11/Big_Ten_Conference_logo_2012.svg_.png" alt="" />
+            <img class="header-icon group" src="http://i.turner.ncaa.com/sites/all/themes/ncaa/ncaa-respo/logo.png" alt="" />
           </li>
-        </ul>
+        </ul> -->
       </li>
       <li>
         <img class="header-icon" id="addMLBMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/mlb.png?w=40&h=40&transparent=true" alt="" />
-        <ul class="dropdown">
+        <!-- <ul class="dropdown">
           <li>
             AL
           </li>
           <li>
             NL
           </li>
-        </ul>
+        </ul> -->
       </li>
       <li>
         <h1 id='logo' ></h1>
