--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -127,8 +127,40 @@
 </ul>
 <div id="home">
   <div class="full-logo">
-    <h1>HomeCourt <i class="fa fa-trophy"></i></h1>
-    <h2>Find Your Fans</h2>
+    <h1>HomeCrowd <i class="fa fa-trophy"></i></h1>
+    <h3>Find Your Fans</h3>
+  </div>
+  <section class="break">
+    FEATURES
+  </section>
+  <h2>LOYALTY</h2>
+  <p>
+    Find the bar loyal that is loyal to your teams and never cheer alone again
+  </p>
+  <h2>FILL THE MAP</h2>
+  <p>
+    Contact the HomeCrowd Team with your bar and loyalty and get the fans pouring in
+  </p>
+  <h2>VERIFY</h2>
+  <p>
+    Surrounded by Fans? Make the bar HC Certified
+  </p>
+  <section class="break">
+    CERTS
+  </section>
+  <div class="certs group">
+    <section>
+      <i class="fa fa-trophy"></i>
+      <p>
+        HC Certified
+      </p>
+    </section>
+    <section>
+      <i class="fa fa-graduation-cap"></i>
+      <p>
+        Alumni Official
+      </p>
+    </section>
   </div>
 </div>
 <div id="map-canvas" class="hide-map"></div>
