Remove green from Color scheme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -127,7 +127,7 @@ header {
 }
 
 .logo:hover {
-  background: #aaaaaa;
+  background: #EB7260;
   cursor: pointer;
   border-radius: 5px;
 
@@ -222,7 +222,7 @@ header {
   top: -30px;
   transform: translateX(-50%);
   margin: auto;
-  background: #29ABA4;
+  background: #C3C3C3;
   transition: top 1.5s;
   border-radius: 5px;
 }
