Add Individial MLB marker functions

--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -135,7 +135,7 @@
   </section>
   <h2>LOYALTY</h2>
   <p>
-    Find the bar loyal that is loyal to your teams and never cheer alone again
+    Find the bar that is loyal to your teams and never cheer alone again
   </p>
   <h2>FILL THE MAP</h2>
   <p>
