--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -27,7 +27,7 @@
         <img class="header-icon" id="addNFLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nfl.png?w=40&h=40&transparent=true" alt="" />
       </li>
       <li>
-        <img class="header-icon" id="addNHLMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/nhl.png?w=40&h=40&transparent=true" alt="" />
+        <img class="header-icon" id="addSECMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa_conf/500/sec.png?w=40&h=40&transparent=true" alt="" />
       </li>
     </ul>
   </nav>
@@ -50,6 +50,24 @@
     <img class="logo" id="addNUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/77.png&w=40&h=40&transparent=true" alt="" />
     <img class="logo" id="addPUMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2509.png&w=40&h=40&transparent=true" alt="" />
     <img class="logo" id="addUWMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/275.png&w=40&h=40&transparent=true" alt="" />
+  </div>
+
+  <div class="sec_logos">
+    <img class="logo" id="addSECufMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/57.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECugaMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/61.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECkuMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/96.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECmizzMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/142.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECuscMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2579.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECtennMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2633.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECvandyMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/238.png&w=40&h=40&transparent=true" alt="" />
+    <div class='white'></div>
+    <img class="logo" id="addSECbamaMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/333.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECarkMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/8.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECaubMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSEClsuMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/99.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECmissMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/145.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECmsuMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/344.png&w=40&h=40&transparent=true" alt="" />
+    <img class="logo" id="addSECtamMarkers" src="http://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/245.png&w=40&h=40&transparent=true" alt="" />
   </div>
 
   <div class="NFL_logos">
